tests/parser_fail_tests/boolFail.flr
 {

----------BoolFail CheckProgram---------
used a period instead of a colon

}

program Bool ( n : boolean , m .boolean);

	begin

		return n = m

	end.